src/snapshots/ruff__linter__tests__future_annotations_pep_604_py310.snap
---
source: src/linter.rs
expression: checks
---
- kind: UsePEP604Annotation
  location:
    row: 40
    column: 3
  end_location:
    row: 40
    column: 16
  fix:
    patch:
      content: int | None
      location:
        row: 40
        column: 3
      end_location:
        row: 40
        column: 16

