src/snapshots/ruff__linter__tests__r002.snap
---
source: src/linter.rs
expression: checks
---
- kind: NoAssertEquals
  location:
    row: 1
    column: 1
  fix:
    content: assertEqual
    start:
      row: 1
      column: 2
    end:
      row: 1
      column: 14
    applied: false
- kind: NoAssertEquals
  location:
    row: 2
    column: 1
  fix:
    content: assertEqual
    start:
      row: 2
      column: 2
    end:
      row: 2
      column: 14
    applied: false

