src/snapshots/ruff__linter__tests__spr001.snap
---
source: src/linter.rs
expression: checks
---
- kind: SuperCallWithParameters
  location:
    row: 17
    column: 18
  end_location:
    row: 17
    column: 23
  fix: ~
- kind: SuperCallWithParameters
  location:
    row: 18
    column: 9
  end_location:
    row: 18
    column: 14
  fix: ~
- kind: SuperCallWithParameters
  location:
    row: 19
    column: 9
  end_location:
    row: 19
    column: 14
  fix: ~

