src/snapshots/ruff__linter__tests__t203.snap
---
source: src/linter.rs
expression: checks
---
- kind: PPrintFound
  location:
    row: 3
    column: 1
  end_location:
    row: 3
    column: 24
  fix:
    content: ""
    location:
      row: 3
      column: 1
    end_location:
      row: 4
      column: 1
    applied: false
- kind: PPrintFound
  location:
    row: 8
    column: 1
  end_location:
    row: 8
    column: 31
  fix:
    content: ""
    location:
      row: 8
      column: 1
    end_location:
      row: 9
      column: 1
    applied: false

