src/snapshots/ruff__linter__tests__u002.snap
---
source: src/linter.rs
expression: checks
---
- kind: UnnecessaryAbspath
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 22
  fix:
    content: __file__
    location:
      row: 3
      column: 5
    end_location:
      row: 3
      column: 22
    applied: false
- kind: UnnecessaryAbspath
  location:
    row: 9
    column: 5
  end_location:
    row: 9
    column: 30
  fix:
    content: __file__
    location:
      row: 9
      column: 5
    end_location:
      row: 9
      column: 30
    applied: false
- kind: UnnecessaryAbspath
  location:
    row: 15
    column: 5
  end_location:
    row: 15
    column: 27
  fix:
    content: __file__
    location:
      row: 15
      column: 5
    end_location:
      row: 15
      column: 27
    applied: false

