src/snapshots/ruff__linter__tests__u005.snap
---
source: src/linter.rs
expression: checks
---
- kind: NoAssertEquals
  location:
    row: 6
    column: 9
  end_location:
    row: 6
    column: 26
  fix:
    content: self.assertEqual
    location:
      row: 6
      column: 9
    end_location:
      row: 6
      column: 26
    applied: false
- kind: NoAssertEquals
  location:
    row: 7
    column: 9
  end_location:
    row: 7
    column: 26
  fix:
    content: self.assertEqual
    location:
      row: 7
      column: 9
    end_location:
      row: 7
      column: 26
    applied: false

