src/snapshots/ruff__linter__tests__u006.snap
---
source: src/linter.rs
expression: checks
---
- kind: UsePEP585Annotation
  location:
    row: 4
    column: 10
  end_location:
    row: 4
    column: 14
  fix:
    content: list
    location:
      row: 4
      column: 10
    end_location:
      row: 4
      column: 14
    applied: false
- kind: UsePEP585Annotation
  location:
    row: 11
    column: 10
  end_location:
    row: 11
    column: 21
  fix:
    content: list
    location:
      row: 11
      column: 10
    end_location:
      row: 11
      column: 21
    applied: false

